<resources>
    <string name="app_name">TaskApp</string>

    <!--  BUTTONS  -->
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_save">Salvar</string>
    <string name="btn_add_task">Adicionar nova task</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="btn_delete">Deletar</string>
    <string name="btn_edit">Editar</string>

    <!--  SPLASH SCREEN  -->
    <string name="logo_description">Task App Logo, a circle with a check mark!</string>

    <!--  AUTH SCREENS  -->
    <string name="input_username_label">Nome do usuário</string>
    <string name="input_username_hint">Digite seu nome de usuário</string>
    <string name="input_email_label">E-mail</string>
    <string name="input_email_hint">Digite seu e-mail</string>
    <string name="input_password_label">Senha</string>
    <string name="input_password_hint">Digite sua senha</string>
    <string name="input_confirm_password_label">Confirme sua senha</string>
    <string name="input_confirm_password_hint">Digite novamente sua senha</string>
    <string name="button_login_label">Login</string>
    <string name="button_register_label">Registre-se</string>
    <string name="button_register_label_link">Ainda não tem conta? Registre-se</string>
    <string name="toolbar_register_title">Cadastre sua conta</string>
    <string name="credenciais_login_invalidas">Credenciais inválidas</string>
    <string name="dados_registros_invalidos">Preencha suas informações</string>
    <string name="senha_diferentes">As senhas devem ser iguais</string>
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>


    <!--  HOME SCREEN  -->
    <string name="button_logout_label">Logout</string>
    <string name="tab_title_todo">A fazer</string>
    <string name="tab_title_doing">Fazendo</string>
    <string name="tab_title_done">Finalizado</string>
    <string name="tabs_accessibility_label">Navegação entre abas: To Do, Doing, Done</string>
    <string name="logout_message">Deseja realmente sair da aplicação?</string>

    <!--  FORM TASK SCREEN  -->
    <string name="form_task_title">Qual a nova tarefa?</string>
    <string name="form_task_edit_title">Editando tarefa…</string>
    <string name="form_task_input_task_title">Título</string>
    <string name="form_task_input_task_hint">Digite o título da sua task</string>
    <string name="form_task_input_task_description">Descrição</string>
    <string name="form_task_input_task_description_hint">Adicione alguns detalhes…</string>
    <string name="form_task_input_task_status">Status</string>
    <string name="form_task_invalid_data">Informações insuficientes para criar uma task</string>

    <!--  BOTTOM SHEET COMPONENT  -->
    <string name="bottom_sheet_component_title">Atenção</string>
    <string name="bottom_sheet_component_content_placeholder">CONTEUDO</string>
    <string name="bottom_sheet_component_confirm_button">Entendido</string>

    <!--  TASK LIST COMPONENT  -->
    <string name="task_list_icon_description">Check Icon</string>
    <string name="task_list_options_icon_description">Task options</string>
    <string name="task_list_date_icon_description">Task date</string>

    <!--  COMMON  -->
    <string name="generic_message_error">Algo deu errado! Tente novamente mais tarde!</string>
    <string name="list_empty">Nenhum item encontrado!</string>
    <string name="list_loading">Buscando itens…</string>
    <string name="delete_task_message">Desejea realmente deletar essa task?</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>