<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_top_rounded_white"
    tools:context=".ui.FormTaskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/form_task_title"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="16dp"
            android:background="?actionBarDivider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_task_input_task_title"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:hint="@string/form_task_input_task_hint"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_task_input_task_description"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/description_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/form_task_input_task_description_hint"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/form_task_input_task_status"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_full_rounded_neutral"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbTodo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/slc_radio_button"
                android:button="@android:color/transparent"
                android:checked="true"
                android:text="@string/tab_title_todo"
                android:textAlignment="center"
                android:textColor="@drawable/slc_radio_button_text"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbDoing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/slc_radio_button"
                android:button="@android:color/transparent"
                android:text="@string/tab_title_doing"
                android:textAlignment="center"
                android:textColor="@drawable/slc_radio_button_text"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/slc_radio_button"
                android:button="@android:color/transparent"
                android:text="@string/tab_title_done"
                android:textAlignment="center"
                android:textColor="@drawable/slc_radio_button_text"
                android:textStyle="bold" />

        </RadioGroup>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                style="@style/SecondaryButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:text="@string/btn_cancel" />

            <Button
                android:id="@+id/btn_save"
                style="@style/PrimaryButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:text="@string/btn_save" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>