<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">

    <LinearLayout
        android:id="@+id/image_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_rounded_bottom_green"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/form_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/ic_logo_app"
            app:tint="@color/yellow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/form_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_rounded_top_white"
        android:orientation="vertical"
        android:padding="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_container">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_email_label"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/input_email_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="16dp"
            android:textColorHint="@color/gray"
            tools:targetApi="o" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_password_label"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/input_password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:textColorHint="@color/gray"
            tools:targetApi="o" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            style="@style/PrimaryButtonStyle"
            android:layout_width="300dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:text="@string/button_login_label" />

        <TextView
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/button_register_label_link"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>