<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterFragment">

    <LinearLayout
        android:id="@+id/image_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_rounded_bottom_green"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/form_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/fragmentToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:navigationIconTint="@color/yellow">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toolbar_register_title"
                    android:textColor="@color/yellow"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/form_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_rounded_top_white"
        android:orientation="vertical"
        android:padding="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_container">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_username_label"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/input_username_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="16dp"
            android:textColorHint="@color/gray"
            tools:targetApi="o" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_email_label"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/input_email_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="16dp"
            android:textColorHint="@color/gray"
            tools:targetApi="o" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_password_label"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/input_password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:textColorHint="@color/gray"
            tools:targetApi="o" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_confirm_password_label"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/confirm_password_input"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/input_confirm_password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:textColorHint="@color/gray"
            tools:targetApi="o" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            style="@style/PrimaryButtonStyle"
            android:layout_width="300dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:text="@string/button_register_label" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>